@@ -13,10 +13,11 @@ Changes in PixelLight 0.9.6-R1 (not yet released)
 - Change: Updated "Newton Game Dynamics" from "2.24"(Linux)/"2.28"(Windows) to "2.32" (first free open-source version of this physics library)
 - Change: "SPARK_PL": Renamed previously experimental "SPARK_PL::SNFireDemo" scene node into "SPARK_PL::SNFire"
 - Change: Performed some minor physics joint scene node modifier refactoring to enhance the usability
+- Bugfix: Fixed some problems with the GLSL shaders when using a NVIDIA graphics card
 - Bugfix: Linux: PLRendererOpenGL: "glXSwapIntervalSGI" was used without been defined, initialized or checked...
 - Bugfix: The swap interval (vertical synchronisation) setting is now working (as long as it is not overwritten by the GPU driver)
 - Bugfix: "PLGraphics:ImageData::Decompress()": There was an buffer overflow when decompressing images with none-multiple of 4 dimensions
-- Bugfix: Fixed some problems with the GLSL shaders when using a NVIDIA graphics card
+- Bugfix: If necessary, joint scene node modifiers need to transform the joint position and direction(s) into the physics world scene container
 
 
 Changes in PixelLight 0.9.5-R1 (released on February 23, 2011)
